<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arkaplan"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_boy"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/boy"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/boy_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:padding="8dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="number"
            android:maxLength="3"
            android:padding="8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_kilo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/kilo"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/kilo_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="4dp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:progress="20" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_cinsiyet"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/cinsiyet"
            android:textColor="#FFFFFF" />

        <RadioGroup
            android:id="@+id/radioGrup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/bay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/bay"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:id="@+id/bayan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bayan"
                android:textColor="#FFFFFF" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_ideal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/ideal_kilo"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/ideal_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_durum"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/durum"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/durum_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorFocusedHighlight"
            android:padding="8dp" />
    </LinearLayout>

</LinearLayout>